upd: change according to markdown rule

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -106,7 +106,7 @@
 
     <!-- ABOUT ME SECTION -->
     <section id="about_me">
-      <h3 class="about_me__title">About Me</h3>
+      <h2 class="about_me__title">About Me</h2>
       <p class="about_me__info">
         I am a <span id="my-age"></span>-year-old Front-End Developer from
         Uzbekistan. Currently, I am studying at Tashkent Textile and Light
