feat: add rs school logo

--- a/index.html
+++ b/index.html
@@ -544,6 +544,14 @@
         <i class="fas fa-heart red-color"></i>
       </p>
       <small class="footer__small">last update: 21 Nov, 2023</small>
+      <a href="https://rs.school/courses/short-track">
+        <img
+          width="180"
+          style="background-color: aliceblue; padding: 5px; border-radius: 6px"
+          src="./img/rs-school-logo.svg"
+          alt="rolling scopes logo"
+        />
+      </a>
     </footer>
 
     <script>
